# dsa_platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  judge-sandbox.yml
docs/: DECISIONS.md  PHASE1_PROMPT.md  architecture.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: candidate.ts  client.ts  types.ts
frontend/src/auth/: ExaminerAuthContext.tsx  RequireRole.test.tsx  RequireRole.tsx  examToken.ts  examinerTokens.ts  useExaminerAuth.ts
frontend/src/components/: CodeEditor.css  CodeEditor.tsx  Countdown.css  Countdown.test.tsx  Countdown.tsx  QuestionNav.css  QuestionNav.tsx  QuestionPanel.css  QuestionPanel.tsx  RequirementsChangedBanner.css  VerdictPanel.css  (+4 more)
infra/: docker-compose.prod.yml  docker-compose.yml
infra/dev-keys/: README.md  rs256-private.pem  rs256-public.pem
infra/postgres/: init-test-db.sh
infra/terraform/: .gitignore  README.md
scripts/: e2e.py
services/exam/: Dockerfile  pyproject.toml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: auth.py  config.py  deps.py  main.py  proxy.py  rate_limit.py  routing.py
services/gateway/tests/: conftest.py  test_auth_planes.py  test_rate_limit.py  test_rate_limit_and_headers.py  test_routing.py
services/judge/: Dockerfile  pyproject.toml
services/judge/app/: compare.py  config.py  contracts.py  runner.py  s3.py  sandbox.py  sqs.py  worker.py
services/judge/runners/: entrypoint.py
services/judge/runners/cpp/: Dockerfile
services/judge/runners/java/: Dockerfile
services/judge/runners/python/: Dockerfile
services/judge/tests/: conftest.py  test_compare.py  test_pipeline_integration.py  test_sandbox.py  test_security.py
services/question/: alembic.ini  migrate.sh  pyproject.toml
(+188 files in other folders)
